<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kakaotalk_login"
        android:textSize="19dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/input_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_ID"
        android:maxLines="1">
    </EditText>
    <EditText
        android:id="@+id/input_PW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_PW"
        android:maxLines="1"
        android:inputType="textPassword">
    </EditText>
    <TextView
        android:id="@+id/check_PW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_pw"
        android:textColor="#888888"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">
    </TextView>
    
    <Button
        android:id="@+id/Checkbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:textStyle="bold">
    </Button>

</LinearLayout>